--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.1
+  shared_preferences: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
