--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   provider: ^4.3.1
   shared_preferences: ^2.0.5
+  uuid: ^2.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
