--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   provider: ^4.3.1
   shared_preferences: ^2.0.5
   uuid: ^2.2.2
+  image_picker: ^0.8.0
+  textfield_tags: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
