updated app name

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "cookbook",
-    "short_name": "cookbook",
+    "name": "recipiebook",
+    "short_name": "recipiebook",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
