--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   uuid: ^2.2.2
   image_picker: ^0.8.0
   textfield_tags: ^1.2.0
+  cloud_firestore: ^2.0.0
+  # firebase_core: ^1.2.0
+  get_it: ^4.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
