--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   uuid: ^2.2.2
   image_picker: ^0.8.0
   textfield_tags: ^1.2.0
-  cloud_firestore: ^2.0.0
-  # firebase_core: ^1.2.0
+  cloud_firestore: ^2.0.03
+  firebase_auth: ^1.1.3
   get_it: ^4.0.2
 
 
