--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.1
-  shared_preferences: ^2.0.5
-  uuid: ^2.2.2
+  provider: ^5.0.0
+  shared_preferences: ^2.0.6
+  uuid: ^3.0.4
   image_picker: ^0.8.0
   textfield_tags: ^1.2.0
   cloud_firestore: ^2.0.03
+  firebase_storage: ^8.1.1
   firebase_auth: ^1.1.3
-  get_it: ^4.0.2
+  get_it: ^7.1.3
+  rxdart: ^0.27.1
 
 
   # The following adds the Cupertino Icons font to your application.
