--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth: ^1.1.3
   get_it: ^7.1.3
   rxdart: ^0.27.1
+  url_launcher: ^6.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
