--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,12 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "debug",
+        },
+        {
+            "name": "cookbook (release mode)",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "release",
         }
     ]
 }
