--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,14 +26,16 @@ dependencies:
   provider: ^5.0.0
   shared_preferences: ^2.0.6
   uuid: ^3.0.4
-  image_picker: ^0.8.0
   textfield_tags: ^1.2.0
-  cloud_firestore: ^2.0.03
-  firebase_storage: ^8.1.1
-  firebase_auth: ^1.1.3
+  cloud_firestore: ^2.2.1
+  firebase_auth: ^1.3.0
   get_it: ^7.1.3
   rxdart: ^0.27.1
   url_launcher: ^6.0.6
+  html: ^0.15.0
+  http: ^0.13.3
+  # alice: ^0.2.1
+  metadata_extract: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
