--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   http: ^0.13.3
   metadata_extract: ^1.0.0
   receive_sharing_intent: ^1.4.5
+  firebase_messaging: ^10.0.1
+  cached_network_image: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
