loader and error dialogs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   receive_sharing_intent: ^1.4.5
   firebase_messaging: ^10.0.1
   cached_network_image: ^3.0.0
+  flutter_spinkit: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
