--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ app.*.symbols
 app.*.map.json
 
 # Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# /android/app/debug
+# /android/app/profile
+# /android/app/release
+# /android/.gradle
+# /android/captures/
+# /android/local.properties
+# /android/**/GeneratedPluginRegistrant.java
