--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,11 @@ android {
             }
         }
     }
+
+     lintOptions {
+        disable 'InvalidPackage'
+        checkReleaseBuilds false //<- add this line
+    }
 }
 
 flutter {
